did some comments on javascripts, still need to do in java classes...delete series, delete game