@@ -7,48 +7,49 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 public class MyUserDetails implements UserDetails {
 
-	private User user;
+    private final User user;
 
-	public MyUserDetails(User user) {
-		this.user = user;
-	}
+    public MyUserDetails(User user) {
+        this.user = user;
+    }
 
-	@Override
-	public Collection<? extends GrantedAuthority> getAuthorities() {
-		SimpleGrantedAuthority authority = new SimpleGrantedAuthority("ADMIN");
-		return Arrays.asList(authority);
-	}
+    @Override
+    public Collection<? extends GrantedAuthority> getAuthorities() {
+        SimpleGrantedAuthority authority = new SimpleGrantedAuthority("ADMIN");
+        return List.of(authority);
+    }
 
-	@Override
-	public String getPassword() {
-		return user.getPass();
-	}
+    @Override
+    public String getPassword() {
+        return user.getPass();
+    }
 
-	@Override
-	public String getUsername() {
-		return user.getLogin();
-	}
+    @Override
+    public String getUsername() {
+        return user.getLogin();
+    }
 
-	@Override
-	public boolean isAccountNonExpired() {
-		return true;
-	}
+    @Override
+    public boolean isAccountNonExpired() {
+        return true;
+    }
 
-	@Override
-	public boolean isAccountNonLocked() {
-		return true;
-	}
+    @Override
+    public boolean isAccountNonLocked() {
+        return true;
+    }
 
-	@Override
-	public boolean isCredentialsNonExpired() {
-		return true;
-	}
+    @Override
+    public boolean isCredentialsNonExpired() {
+        return true;
+    }
 
-	@Override
-	public boolean isEnabled() {
-		return true;
-	}
+    @Override
+    public boolean isEnabled() {
+        return true;
+    }
 }
